# playground

./: static_check  transform.cpp
beast_http_client/async/: conanfile.py  http_client_async.cpp  http_client_sync_ssl.cpp  meson.build  readme
boost/: CMakeLists.txt  Makefile  boost.files  makefile
boost/bimap/: main.cpp
boost/circular_buffer/: main.cpp
boost_asio_socket/: client.cpp  main.cpp  meson.build  struct.h
boost_training/bimap/: bimap.vcxproj  main.cpp
boost_training/circular_buffer/: circular_buffer.vcxproj  main.cpp
boost_usage/: boost_usage.vcxproj  boost_usage.vcxproj.filters
boost_usage/Debug/boost_usage.tlog/: CL.read.1.tlog  CL.write.1.tlog  boost_usage.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
conan/: conanfile.py  readme
conan/src/: hello.cpp  meson.build
corba/: hello_world.idl  main.cpp  meson.build  time.idl
gtest/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
jni/: .makefile.swo  .makefile.swp  HelloJNI.c  HelloJNI.java  README  makefile
make_unique/: CMakeLists.txt  README  main.cpp
opencv/: conanfile.py  meson.build
stlab/: meson.build  test.cpp
task_system/: .conanfile.py.swp  .main.cpp.swp  .ycm_extra_conf.py  bench.cpp  conanfile.py  fibonacci.h  main.cpp  meson.build
template_member/: template_member.cpp
toupper/: main.cpp
